--- a/style.css
+++ b/style.css
@@ -2,4 +2,24 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  text-align: center
+  ;
 }
+nav{
+  padding-left: 10px;
+  padding: right 10px;
+  background-color: grey;
+}
+#featured-property {
+  text-align: center;
+  font-size: smaller;
+}
+#details{
+  display: flex;
+  flex-direction: row;
+  gap: 400px;
+  background-color: red;
+}
+
+
+
